minor tweaks & spacing issues

--- a/style.css
+++ b/style.css
@@ -452,7 +452,7 @@ figcaption {
 
 .project-tags p {
 	text-align: center;
-	margin-top: -14px;
+	margin-top: -10px;
 	margin-left: 0px;
 	font-size: 12px;
 	font-family: Kanit;
